--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: compress
         <div class="container animated fadeIn">
             <div class="row">
                     <a href="{{ site.url }}">
-                        <img src="{{ site.logo }}" class="img-circle zoombtn animated rotateIn">
+                        <img src="{{ site.logo }}" class="img-circle zoombtn">
                     </a>
                     <h3 class="title">
                         <a class="zoombtn" href="{{ site.url }}">
@@ -39,7 +39,7 @@ layout: compress
                          Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         Resume
                          </a>
                  </h3>
             </div>
