--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: compress
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
                     {% if page.project %}
-                    <a class="btn zoombtn" href="{{site.url}}/projects/">
+                    <a class="btn zoombtn" href="{{site.url}}/resume/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
