removing even more project references.

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -22,7 +22,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %}
-                        {% if post.project %}
+                        {% if post.resume %}
                     <ul>
                         <li>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
