--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -22,7 +22,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %}
-                        {% if post.project == null %}
+                        {% if post.resume == null %}
                     <ul>
                         <li>
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
