--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: compress
                       {% include read-time.html %}
                     </p><!-- /.entry-reading-time -->
                     {% endif %}
-                    {% if page.project %}
+                    {% if page.resume %}
                     <a class="btn zoombtn" href="{{site.url}}/resume/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
